--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.mvc.view.suffix= .jsp
 spring.datasource.url=jdbc:mysql://localhost:3306/sportyshoes
 spring.datasource.username=root
 spring.datasource.password=Gp4649c2
+#spring.jpa.hibernate.ddl-auto=update 
